--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <li>One</li>
         <li>Two</li>
         <li>Three</li>
-        Four
+        <li>Four</li>
+        
     </ul>
 </body>
 </html>
